backup_individuals/sjeng/use_undefined_identifier/c2/calc_attackers
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/calc_attackers/src/attacks.c:561:12: error: use of undeclared identifier 'dword_66759C'
for ( m = &dword_66759C[v37]; v38 == 13; --m ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/calc_attackers/src/attacks.c:629:13: error: use of undeclared identifier 'dword_66759C'
for ( i2 = &dword_66759C[v15]; v16 == 13; --i2 ) 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/calc_attackers/src/obj/attacks.o] Error 1
